updated French translation

--- a/po/wesnoth-sotbe/fr.po
+++ b/po/wesnoth-sotbe/fr.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2012-01-09 02:19+0100\n"
-"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
+"PO-Revision-Date: 2012-01-11 22:42+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -2563,7 +2563,6 @@ msgstr "Sauver Inarix"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:34
-#, fuzzy
 msgid "Wait for Inarix’s arrival from the south on turn 4"
 msgstr "Attendre l'arrivée d'Inarix depuis le sud au tour 4"
 
@@ -2793,7 +2792,6 @@ msgstr "Attends un instant."
 
 #. [message]: speaker=unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:572
-#, fuzzy
 msgid "<i>Phew!</i>"
 msgstr "<i>Pfiou !</i>"
 
@@ -2864,7 +2862,6 @@ msgstr "Défendre Prestim pendant 4 jours"
 
 #. [objective]: condition=lose
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:30
-#, fuzzy
 msgid ""
 "Enemies control any villages on the north side of the river when turns run "
 "out"
@@ -2894,7 +2891,6 @@ msgstr ""
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:255
-#, fuzzy
 msgid ""
 "I’m not that sure. Every fortress has its own weakness. Prestim’s walls are "
 "strong but long and it is difficult to defend them from many directions at "
@@ -2929,7 +2925,6 @@ msgstr "Dans quatre jours. À mon avis, ça risque d'être trop tard."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:275
-#, fuzzy
 msgid ""
 "Fool! We can hold that long. But we have to have Prestim firmly in control "
 "when the shamans arrive with the Great Horde. We can’t let the humans "
@@ -2941,7 +2936,6 @@ msgstr ""
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:285
-#, fuzzy
 msgid ""
 "Because if we cannot decisively beat these humans, the other tribes won’t "
 "think us strong enough to lead them. Each chieftain will try to claim the "
@@ -2975,7 +2969,6 @@ msgstr "Chargez !"
 
 #. [message]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:895
-#, fuzzy
 msgid "Get them!"
 msgstr "Faites-le !"
 
@@ -2996,7 +2989,6 @@ msgstr "Ahh, foutre ! Ils ont des hommes-poissons avec eux."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1094
-#, fuzzy
 msgid ""
 "The Great Horde is almost here! Drive them out of our villages <b>now</b>!"
 msgstr ""
@@ -3010,7 +3002,6 @@ msgstr "Nous voici !"
 
 #. [message]: role=greathordewarlord1
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1135
-#, fuzzy
 msgid ""
 "What’s this? This weakling has let humans enter Prestim? I will lead the "
 "horde and push them to the river!"
@@ -3020,7 +3011,6 @@ msgstr ""
 
 #. [message]: role=greathordewarlord2
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1141
-#, fuzzy
 msgid ""
 "Bah! I’m the only one strong enough to drive out the humans! The Great Horde "
 "follows me!"
@@ -3030,7 +3020,6 @@ msgstr ""
 
 #. [message]: speaker=Earl Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1147
-#, fuzzy
 msgid ""
 "Look at that, the stupid orcs are starting to fight amongst themselves! "
 "Now’s our chance, everyone attack!"
@@ -3733,7 +3722,6 @@ msgstr "Vous feriez mieux d'aller voir."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:682
-#, fuzzy
 msgid "I obey."
 msgstr "À vos ordres."
 
@@ -3996,7 +3984,6 @@ msgstr "Allons-y maintenant, nous avons rendez-vous avec Shan Taum."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg:576
-#, fuzzy
 msgid ""
 "I can’t leave these renegades unguarded at our rear. I must take care of "
 "them before continuing."
@@ -4648,7 +4635,6 @@ msgstr "Sang et acier ! Le traître m'appartenait !"
 
 #. [message]: speaker=Howgarth III
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/18_Northern_Alliance.cfg:675
-#, fuzzy
 msgid "I’m sorry, Kapou’e. I’ll have my men leave what remains of him to you."
 msgstr ""
 "Je suis désolé, Kapou'e. Je demanderai à mes hommes de vous laisser ses "
