--- a/po/wesnoth-tb/fr.po
+++ b/po/wesnoth-tb/fr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-08 22:18+0100\n"
+"PO-Revision-Date: 2012-01-11 22:07+0100\n"
 "Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
@@ -68,7 +68,6 @@ msgstr "Conception de la campagne"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:37
-#, fuzzy
 msgid "Prose and Story Edits"
 msgstr "Relecture et correction des textes"
 
@@ -171,7 +170,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:76
-#, fuzzy
 msgid ""
 "12 V, 363 YW\n"
 "Excerpt from the journal of Baran of Maghre\n"
@@ -325,13 +323,11 @@ msgstr "Je vous salue."
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:215
-#, fuzzy
 msgid "Is that all, Arvith? I understand, but..."
 msgstr "Est-ce tout, Arvith ? Je comprends, mais..."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:219
-#, fuzzy
 msgid "You called, and I came; be content with that. What ails Maghre?"
 msgstr ""
 "Tu as appelé, je suis venu ; il faudra t’en contenter. De quels maux souffre "
@@ -364,7 +360,6 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:231
-#, fuzzy
 msgid ""
 "All right. I will do this for the village. Can you keep the mage off our "
 "backs?"
@@ -387,7 +382,6 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:239
-#, fuzzy
 msgid "... Aye. Just make sure you’re there when we need you."
 msgstr ""
 "... Bien. Assurez-vous juste d'être là quand nous aurons besoin de vous."
@@ -403,13 +397,11 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:258
-#, fuzzy
 msgid "Baran has not made his attack!"
 msgstr "Baran n'a pas encore lancé son attaque !"
 
 #. [message]: role=Mercenary
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:262
-#, fuzzy
 msgid "Could he have abandoned us?"
 msgstr "Se pourrait-il qu'il nous ait abandonnés ?"
 
@@ -499,7 +491,6 @@ msgstr "La Poursuite"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:30
-#, fuzzy
 msgid "Arvith and his band rode north in search of his missing brother."
 msgstr ""
 "Arvith et sa bande chevauchèrent vers le nord à la recherche de son frère "
@@ -507,7 +498,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:41
-#, fuzzy
 msgid ""
 "16 V, 363 YW\n"
 "Excerpt from the journal of Arvith of Maghre\n"
@@ -545,7 +535,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:50
-#, fuzzy
 msgid ""
 "16 V, 363 YW\n"
 "Excerpt from the journal of Arvith of Maghre\n"
@@ -762,7 +751,6 @@ msgstr ""
 
 #. [message]: role=speaker
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:397
-#, fuzzy
 msgid ""
 "Captain, what are we riding into? I thought you wanted nothing to do with "
 "Baran any more, not since Toen Caric."
@@ -772,7 +760,6 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:401
-#, fuzzy
 msgid ""
 "I’m no longer sure. What’s between us remains, but knowing someone else has "
 "lain hands on him changes things. Mount up, and let’s get moving."
@@ -894,7 +881,6 @@ msgstr "Château gardé"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:54
-#, fuzzy
 msgid ""
 "19 IV, 363 YW\n"
 "Excerpt from the journal of Rotharik the Clanless\n"
@@ -938,7 +924,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:62
-#, fuzzy
 msgid ""
 "19 IV, 363 YW\n"
 "Excerpt from the journal of Rotharik the Clanless\n"
@@ -1013,7 +998,6 @@ msgstr "Sauver Baran"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:309
-#, fuzzy
 msgid ""
 "Arvith and his men halt outside of the castle, gazing for a moment at the "
 "hulking mass of stone looming in the fog. There is movement in the mist."
@@ -1059,7 +1043,6 @@ msgstr "Passez, l'ami."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:369
-#, fuzzy
 msgid ""
 "The adept didn’t lead us astray after all. I’ll keep my word, distasteful as "
 "it may be; cut him loose, and let’s be rid of him."
@@ -1092,7 +1075,6 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:409
-#, fuzzy
 msgid "One less braggart orc in the world."
 msgstr "Un vantard d'orc en moins dans ce monde."
 
@@ -1103,7 +1085,6 @@ msgstr "Capitaine, que font ces <i>orcs</i> aussi loin au sud ?"
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:420
-#, fuzzy
 msgid "Good question. Perhaps my brother will have found out."
 msgstr "Bonne question. Peut-être mon frère l'aura-t-il découvert."
 
@@ -1180,7 +1161,6 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:666
-#, fuzzy
 msgid "Your hand or Tairach’s, death is still death... (argh)"
 msgstr ""
 "Qu'elle soit de votre main ou de celle de Tairach, la mort reste la mort... "
@@ -1188,9 +1168,8 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:674
-#, fuzzy
 msgid "‘Tairach’? Who or what is Tairach?"
-msgstr "« Tairach » ? Qu'est-ce que ça veut dire ?"
+msgstr "« Tairach » ? C'est qui ou c'est quoi Tairach ?"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:678
@@ -1233,7 +1212,6 @@ msgstr "Je suis heureux de te voir, Arvith."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:797
-#, fuzzy
 msgid "And you too, brother."
 msgstr "Et toi aussi, frère."
 
@@ -1266,13 +1244,11 @@ msgstr "Merci de m'avoir sauvé. Je... n'étais pas certain que tu viendrais."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:865
-#, fuzzy
 msgid "Have you no faith in your brother, Baran?"
 msgstr "Ne crois-tu donc pas en ton frère, Baran ?"
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:869
-#, fuzzy
 msgid ""
 "It’s not that. Perhaps I deserved to rot here. I failed you. I failed you "
 "again."
@@ -1282,7 +1258,6 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:873
-#, fuzzy
 msgid ""
 "That is as may be. But you are my brother still. And... I never doubted you "
 "would have come for me."
@@ -1328,7 +1303,6 @@ msgstr "Retour au village"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:37
-#, fuzzy
 msgid ""
 "27 V, 363 YW\n"
 "Excerpt from the journal of Baran of Maghre\n"
@@ -1354,7 +1328,7 @@ msgstr ""
 "C'était merveilleux d'être sorti de ce cachot et de voir à nouveau la "
 "lumière du jour sans être accablé par la peur de mourir, voire pire... ainsi "
 "soulagé, je me suis occupé d'une tâche presque aussi terrifiante : présenter "
-"mes excuses mon frère.\n"
+"mes excuses à mon frère.\n"
 "\n"
 "Arvith m'avait déjà largement pardonné quand il m'a libéré de ma cellule. "
 "Nous avons tout de même pris toute la semaine passée pour consolider à "
@@ -1365,7 +1339,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:47
-#, fuzzy
 msgid ""
 "27 V, 363 YW\n"
 "Excerpt from the journal of Baran of Maghre\n"
@@ -1389,12 +1362,12 @@ msgstr ""
 "Extrait du journal de Baran de Maghre\n"
 "\n"
 "Bien que cela me tourmente moins maintenant,  je repense souvent à Toen "
-"Caric. Nous aurions dû être pouvoir repousser les orcs sans grandes pertes : "
-"l'attaque en tenaille qu'avait imaginée Arvith aurait pu marcher, sans moi. "
-"J'ai été imprudent de laisser mes hommes en arrière ; j'ai certes blessé le "
-"chef de guerre en le forçant à s'enfuir, mais à un prix qui a éclipsé ce "
-"succès. Ceux dont j'avais la responsabilité seraient encore en vie si "
-"j'étais resté avec eux.\n"
+"Caric. Nous aurions dû être en pouvoir de repousser les orcs sans grandes "
+"pertes : l'attaque en tenaille qu'avait imaginée Arvith aurait pu marcher, "
+"sans moi. J'ai été imprudent de laisser mes hommes en arrière ; j'ai certes "
+"blessé le chef de guerre en le forçant à s'enfuir, mais à un prix qui a "
+"éclipsé ce succès. Ceux dont j'avais la responsabilité seraient encore en "
+"vie si j'étais resté avec eux.\n"
 "\n"
 "Je ne peux pas en vouloir à Arvith de m'avoir tenu responsable de leur mort "
 "et je ne pourrai jamais effacer le mal que j'ai fait, mais j'imagine que le "
@@ -1467,7 +1440,6 @@ msgstr "Ce seigneur de guerre ! C'est..."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:193
-#, fuzzy
 msgid "Yes, I’d know that face anywhere. Especially after what you did to it."
 msgstr ""
 "Oui, je reconnaîtrais ce visage n'importe où. Surtout après ce que tu lui as "
@@ -1475,25 +1447,21 @@ msgstr ""
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:197
-#, fuzzy
 msgid "The warlord from Toen Caric."
 msgstr "Le seigneur de guerre de Toen Caric."
 
 #. [message]: speaker=Tairach
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:201
-#, fuzzy
 msgid "You! The mage who scarred me with fire! KILL THEM!"
 msgstr "Vous ! Le mage qui m'a brûlé ! TUEZ-LES !"
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:205
-#, fuzzy
 msgid "Let’s finish what we started, brother."
 msgstr "Finissons ce que nous avons commencé, frère."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:209
-#, fuzzy
 msgid "Aye. I’ll be the right arm, and you’ll be the left. Let’s go!"
 msgstr "D'accord. Je serai le bras droit et toi le gauche. En avant !"
 
@@ -1542,7 +1510,6 @@ msgstr "Tuer le seigneur de guerre orc pour libérer le village"
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:271
-#, fuzzy
 msgid ""
 "It is finished. We’ve defeated him at last. It was good to have you at my "
 "side, Baran."
@@ -1594,7 +1561,6 @@ msgstr "L'Histoire de deux frères - Épilogue"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/05_Epilogue.cfg:25
-#, fuzzy
 msgid ""
 "22 IX, 365 YW\n"
 "Excerpt from the journal of Arvith of Maghre\n"
@@ -1626,7 +1592,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/05_Epilogue.cfg:34
-#, fuzzy
 msgid ""
 "22 IX, 365 YW\n"
 "Excerpt from the journal of Arvith of Maghre\n"
@@ -1645,7 +1610,7 @@ msgstr ""
 "pouvoir me lier d'amitié avec lui, mais il est moins arrogant que les "
 "autres. Kalenz, comme il se nomme lui-même. Il a vu beaucoup de choses ; je "
 "peux le dire rien qu’en voyant son regard. Je crois que nous aurons fort à "
-"faire d'ici notre prochain paie.\n"
+"faire d'ici notre prochaine solde.\n"
 "\n"
 "Mais en attendant, il est bon de se détendre et de profiter de la paix."
 
