--- a/po/wesnoth-low/fr.po
+++ b/po/wesnoth-low/fr.po
@@ -1,17 +1,18 @@
-#
+# Guillaume Pascal <guillaume.pascal43@laposte.net>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2012-01-09 18:48+0100\n"
-"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
+"PO-Revision-Date: 2012-01-12 15:07+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Virtaal 0.7.0\n"
 
 # Abv : Légende de Wesmer
 #. [campaign]: id=LOW
@@ -1556,7 +1557,6 @@ msgstr "Coffre au trésor"
 
 #. [object]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/05_The_Saurian_Treasury.cfg:281
-#, fuzzy
 msgid ""
 "The bearer of this chest is slowed in movement and attack by the same effect "
 "as the slow weapon special. Slow halves the damage caused by attacks and the "
@@ -1639,7 +1639,6 @@ msgstr ""
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/05_The_Saurian_Treasury.cfg:474
-#, fuzzy
 msgid ""
 "But the Ka’lian’s gold is the Ka’lian’s. Would you have us divide our "
 "forces, some to return it to them while others attempt your thunder-stroke?"
@@ -1650,7 +1649,6 @@ msgstr ""
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/05_The_Saurian_Treasury.cfg:478
-#, fuzzy
 msgid ""
 "Cleodil’s doubt is wise. Only a foolish commander divides his forces in the "
 "presence of superior numbers; to do so is to invite defeat in detail."
@@ -1661,7 +1659,6 @@ msgstr ""
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/05_The_Saurian_Treasury.cfg:482
-#, fuzzy
 msgid "Landar, thoughts that brew in hot blood are seldom well-found."
 msgstr ""
 "Landar, les décisions prises sous le coup de l'émotion sont rarement "
@@ -1669,10 +1666,9 @@ msgstr ""
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/05_The_Saurian_Treasury.cfg:486
-#, fuzzy
 msgid "It... is so. Again you speak wisdom. Very well; to the Ka’lian!"
 msgstr ""
-"C'est ... d'accord. Encore une fois vous parlez avec sagesse. Très bien ; à "
+"C'est... d'accord. Encore une fois vous parlez avec sagesse. Très bien ; à "
 "Ka'lian !"
 
 #. [scenario]: id=06_Acquaintance_in_Need
@@ -1756,7 +1752,6 @@ msgstr "Un elfe qui raisonne comme un nain ! Je crois que je t'aime bien !"
 # Il me semble que "whisper^" est une indication, comme "female^", qui ne doit pas être traduite - GB
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:296
-#, fuzzy
 msgid "whisper^—For an elf..."
 msgstr "Pour un elfe..."
 
@@ -1895,13 +1890,11 @@ msgstr "Fuyez ! Ils nous ont enfoncés !"
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:505
-#, fuzzy
 msgid "Hunt them down and kill every single one of them!"
 msgstr "Traquez-les et tuez-les tous jusqu'au dernier !"
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:509
-#, fuzzy
 msgid ""
 "It is not wise to put a wounded foe in a desperate situation; they will but "
 "fight harder for it. Break their will and let them flee, so they will spread "
@@ -1913,7 +1906,6 @@ msgstr ""
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:513
-#, fuzzy
 msgid ""
 "She is right. Don’t let them lure you away from the Ka’lian, preparations "
 "for when more of them arrive return must be made."
@@ -1947,13 +1939,12 @@ msgstr ""
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:546
-#, fuzzy
 msgid ""
 "Galtrid, speak not of defeat. Elvenkind shall rise! Our enemies shall perish "
 "in blood and fire!"
 msgstr ""
-"Galtrid, ne parle pas de défaite. L'elfité triomphera ! Nos ennemis périront "
-"dans le sang et le feu !"
+"Galtrid, ne parle pas de défaite. L'elficité triomphera ! Nos ennemis "
+"périront dans le sang et le feu !"
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:550
@@ -1995,7 +1986,6 @@ msgstr "C'est Olurf ! Il a réussi !"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:662
-#, fuzzy
 msgid "Where do you want Olurf to deploy?"
 msgstr "Où voulez-vous qu'Olurf se déploie ?"
 
@@ -2011,7 +2001,6 @@ msgstr "Ou sur la rive est du fleuve dans les collines de Karmarth ?"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:686
-#, fuzzy
 msgid "Choose the deployment of Olurf and his forces!"
 msgstr "Choisissez le déploiement d'Olurf et de son armée !"
 
@@ -2057,20 +2046,18 @@ msgstr "Et nous avons aussi ramené ce qu'il reste du trésor elfe!"
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:766
-#, fuzzy
 msgid "Perhaps the gold will our word weight with the council."
-msgstr "Peut-être l'or donnera-t-il du poids à notre parole au Conseil."
+msgstr "Peut-être l'or donnera-t-il de poids à notre parole au Conseil."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:772
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:778
-#, fuzzy
 msgid ""
 " has left the recovered gold into the elvish treasury. You will start the "
 "next scenario with a preset amount."
 msgstr ""
 " a laissé l'or récupéré dans les coffres elfiques. Vous commencerez le "
-"scénario suivant avec la valeur prédéfinie."
+"scénario suivant avec le montant d'or prédéfini."
 
 #. [message]: speaker=narrator
 #. [part]
@@ -2160,7 +2147,6 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:830
-#, fuzzy
 msgid ""
 "Galtrid, my friend. Do not let my death be in vain. Destroy these foul orcs, "
 "and sing for me in the green woods when we have won."
@@ -2171,7 +2157,6 @@ msgstr ""
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:834
-#, fuzzy
 msgid "We shall avenge you tenfold!"
 msgstr "Nous vous vengerons dix fois !"
 
@@ -2182,13 +2167,11 @@ msgstr "Il est mort. Trop rapide. Ses hurlements étaient doux."
 
 #. [message]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:857
-#, fuzzy
 msgid "Let us pursue the orc who murdered $unit.name|!"
 msgstr "Poursuivons l'orc qui a assassiné $unit.name| !"
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:861
-#, fuzzy
 msgid ""
 "No, don’t leave your formation. An elf was slain by beast. What does it "
 "matter which beast it was? We must kill them all."
@@ -2450,7 +2433,6 @@ msgstr "Après avoir quitté le conseil, nos amis discutèrent en privé..."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/08_Council_of_Hard_Choices.cfg:75
-#, fuzzy
 msgid ""
 "Perhaps you were wiser than I, Landar. Had we divided our forces, we would "
 "not be bound to inaction now."
@@ -2490,12 +2472,11 @@ msgstr "Cléodil"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/08_Council_of_Hard_Choices.cfg:85
-#, fuzzy
 msgid ""
 "I too am troubled by the council’s passivity. But it was not our decision to "
 "make."
 msgstr ""
-"Moi aussi, je suis troublé par la passivité du Conseil. Mais ce n'était pas "
+"Moi aussi, je suis troublée par la passivité du Conseil. Mais ce n'était pas "
 "à nous de prendre cette décision."
 
 #. [part]
@@ -2729,7 +2710,6 @@ msgstr ""
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:432
-#, fuzzy
 msgid "They are far too numerous to risk battle with. Let’s cross the river!"
 msgstr ""
 "Ils sont beaucoup trop nombreux pour risquer une bataille contre eux. "
@@ -2759,13 +2739,12 @@ msgstr ""
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:444
-#, fuzzy
 msgid ""
 "You speak my thought, Cleodil. Close in behind me; I’ll guard you from harm "
 "myself. Look to your weapons as we cross, all! And be wary."
 msgstr ""
 "Vous m'ôtez les mots de la bouche, Cléodil. Restez bien derrière moi : je "
-"vous protègerai moi-même. Préparez vos armes pour la traversée, tous ! Et "
+"vous protégerai moi-même. Préparez vos armes pour la traversée, tous ! Et "
 "soyez prudents."
 
 #. [message]: speaker=narrator
@@ -2813,7 +2792,6 @@ msgstr ""
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:583
-#, fuzzy
 msgid ""
 "Hasn’t enough blood been shed? I think we can compose matters with them "
 "after the threat of the orcs has been met."
@@ -2922,7 +2900,6 @@ msgstr "Moi aussi, je pense que nous sommes en grand danger."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:244
-#, fuzzy
 msgid ""
 "Cleodil, stay close to me. If there is anything real behind this aura of "
 "dread, likely your keen senses will find it first and I will want to know "
@@ -2975,7 +2952,6 @@ msgstr "C'est... c'est monstrueux !"
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:334
-#, fuzzy
 msgid ""
 "I sense no malice in it; we are the interlopers here. Spare it if you can."
 msgstr ""
@@ -2984,7 +2960,6 @@ msgstr ""
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:338
-#, fuzzy
 msgid ""
 "Do as Cleodil says. We have enemies sufficient without provoking new ones."
 msgstr ""
@@ -3739,7 +3714,6 @@ msgstr "4j MC — LdW, Mode Difficile, Chapitre quatre"
 
 #. [multiplayer]: id=14_Human_Alliance_HARD, id=14_Human_Alliance_EASY, id=14_Human_Alliance_NORMAL
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:6
-#, fuzzy
 msgid ""
 "<i>The Legend of Wesmere</i>\n"
 "Multiplayer Campaign\n"
@@ -3758,7 +3732,6 @@ msgstr "4j MC — LdW, Mode Facile, Chapitre quatre"
 
 #. [multiplayer]: id=14_Human_Alliance_HARD, id=14_Human_Alliance_EASY, id=14_Human_Alliance_NORMAL
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:11
-#, fuzzy
 msgid ""
 "<i>The Legend of Wesmere</i>\n"
 "Multiplayer Campaign\n"
@@ -3777,7 +3750,6 @@ msgstr "4j MC — LdW, Mode Normal, Chapitre quatre"
 
 #. [multiplayer]: id=14_Human_Alliance_HARD, id=14_Human_Alliance_EASY, id=14_Human_Alliance_NORMAL
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:16
-#, fuzzy
 msgid ""
 "<i>The Legend of Wesmere</i>\n"
 "Multiplayer Campaign\n"
@@ -3869,7 +3841,6 @@ msgstr "C'est donc vrai ! Les elfes sont venus à notre secours !"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:465
-#, fuzzy
 msgid "Hey! Do I look like an elf?"
 msgstr "Hé ! Est-ce que j'ai l'air d'un elfe ?"
 
@@ -4001,13 +3972,11 @@ msgstr ""
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:883
-#, fuzzy
 msgid "It is not well that we have become so divided as this."
 msgstr "Il est regrettable que nous nous soyons autant divisés."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:887
-#, fuzzy
 msgid ""
 "No, it is not. But if we do not defeat these orcs here and now our divisions "
 "will all be moot. I will take every sword-arm I can get and be glad of them."
@@ -4058,7 +4027,6 @@ msgstr ""
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:971
-#, fuzzy
 msgid ""
 "Indeed it is not. As always, Cleodil, you speak with the wisdom and care "
 "that befits a healer. That is a good reminder for those who must walk the "
@@ -4071,7 +4039,6 @@ msgstr ""
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:975
-#, fuzzy
 msgid ""
 "A good fight against foul enemies. These orcs make a dwarf’s hackles rise; I "
 "might even fight them for free, next time."
@@ -4837,7 +4804,6 @@ msgstr "2j MC — LdW, Mode Normal, Chapitre cinq"
 
 #. [multiplayer]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/19_Costly_Revenge.cfg:5
-#, fuzzy
 msgid ""
 "<i>The Legend of Wesmere</i>\n"
 "Multiplayer Campaign\n"
@@ -4906,13 +4872,12 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/19_Costly_Revenge.cfg:64
-#, fuzzy
 msgid ""
 "Then you who walk the earth path and carry steel can collect that price. "
 "Those on the faerie path will not be with you. Not this time."
 msgstr ""
 "Alors vous qui foulez la terre et portez l'acier, allez donc prendre votre "
-"butin. Les créatures féériques refusent de rester à vos côtés pour cette "
+"butin. Les créatures féeriques refusent de rester à vos côtés pour cette "
 "fois."
 
 #. [part]
@@ -5632,7 +5597,6 @@ msgstr ""
 
 #. [unit_type]: id=Elvish Horse Archer
 #: data/campaigns/Legend_of_Wesmere/units/Horse_Archer.cfg:13
-#, fuzzy
 msgid "This is a stub!"
 msgstr "C'est une ébauche !"
 
@@ -5653,19 +5617,16 @@ msgstr "arc"
 
 #. [leadership]: id=elates_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:10
-#, fuzzy
 msgid "elates Kalenz"
 msgstr "exaltation de Kalenz"
 
 #. [leadership]: id=elates_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:11
-#, fuzzy
 msgid "female^elates Kalenz"
 msgstr "exaltation de Kalenz"
 
 #. [leadership]: id=elates_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:15
-#, fuzzy
 msgid ""
 "elates Kalenz:\n"
 "Through the special bond between Kalenz and Cleodil, she elates him to fight "
@@ -5684,20 +5645,18 @@ msgstr "Soins de Kalenz +4"
 
 #. [heals]: id=heals_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:36
-#, fuzzy
 msgid "female^heals Kalenz +4"
 msgstr "soins pour Kalenz +4"
 
 #. [heals]: id=heals_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:38
-#, fuzzy
 msgid ""
 "heals +4:\n"
 "If a shyde has developed a special bond to a person her healing abilities "
 "increase for him.  This allows Cleodil to give Kalenz extra points of "
 "healing at the beginning of your turn."
 msgstr ""
-"Soins +4 :\n"
+"soins +4 :\n"
 "Si une nymphe a développé un lien spécial avec quelqu'un, ses capacités de "
 "guérison augmentent pour lui. Cela permet à Cléodil de donner des points "
 "supplémentaires de guérison à Kalenz au début de votre tour."
@@ -5709,13 +5668,11 @@ msgstr "Préparez-vous à mourir, sorcière elfe !"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/characters.cfg:157
-#, fuzzy
 msgid "I will slay any who harms her without mercy."
 msgstr "Je massacrerai quiconque la blesse sans aucune pitié."
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/utils/characters.cfg:161
-#, fuzzy
 msgid "Nor will you find me an easy foe!"
 msgstr "Et je ne me laisserai pas faire non plus !"
 
@@ -5726,7 +5683,6 @@ msgstr "Je suis blessée !"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/characters.cfg:175
-#, fuzzy
 msgid "Cleodil! No! I will aid you."
 msgstr "Cléodil ! Non ! Je vais vous aider."
 
