--- a/po/wesnoth-utbs/cs.po
+++ b/po/wesnoth-utbs/cs.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-11 13:42+0100\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-06 16:22+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "Language: cs\n"
@@ -15173,6 +15173,8 @@ msgstr "Pouštní šamanka"
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:34
 msgid "Desert Shamans focus on less violent ways to hinder the enemy."
 msgstr ""
+"Pouštní šamanky se zaměřují především na méně násilné způsoby konfrontace s "
+"nepřítelem jako zpomalení."
 
 #. [attack]: type=impact
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:50
