updated Italian translation

--- a/po/wesnoth/it.po
+++ b/po/wesnoth/it.po
@@ -8,19 +8,20 @@
 # Automatically generated, 2004.
 # Alessio D'Ascanio <otaku@fastwebnet.it>, 2004, 2005.
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2007, 2008, 2009, 2010, 2011.
+# Luciano Montanaro <mikelima@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-04 16:32+0100\n"
-"Last-Translator: Luciano Montanaro <mikelima@cirulla.net>\n"
+"PO-Revision-Date: 2012-01-14 00:00+0100\n"
+"Last-Translator: Luciano Montanaro <mikelima@gmail.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.2\n"
 "X-Poedit-Language: Italian\n"
 "X-Poedit-Country: ITALY\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -2320,8 +2321,12 @@ msgstr "Server alternativo di Wesnoth"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:7
-msgid "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,Junicode-Regular.ttf"
-msgstr "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,Junicode-Regular.ttf"
+msgid ""
+"DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,"
+"Junicode-Regular.ttf"
+msgstr ""
+"DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,"
+"Junicode-Regular.ttf"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:8
@@ -3560,7 +3565,9 @@ msgid_plural ""
 "The selected add-on has the following dependencies. Do you want to install "
 "them?"
 msgstr[0] ""
+"L’estensione selezionata ha le seguenti dipendenze. Vuoi installarla?"
 msgstr[1] ""
+"Le estensioni selezionate hanno le seguenti dipendenze. Vuoi installarle?"
 
 #: src/addon/manager.cpp:828
 msgid "Installation of a dependency failed"
@@ -3727,6 +3734,9 @@ msgid ""
 "Deleting '$addon|' will permanently erase its download and upload counts on "
 "the add-ons server. Do you really wish to continue?"
 msgstr ""
+"La cancellazione di '$addon|' cancellerà permanentemente i conteggi di "
+"caricamento e scaricamento dal server delle estensioni. Vuoi davvero "
+"continuare?"
 
 #: src/addon/manager.cpp:1359
 msgid "Network communication error."
@@ -3762,7 +3772,11 @@ msgid_plural ""
 "The following add-ons appear to have publishing or version control "
 "information stored locally, and will not be removed:"
 msgstr[0] ""
+"La seguente estensione sembra che abbia informazioni di pubblicazione o di "
+"controllo di revisione memorizzate localmente, e non sarà rimossa:"
 msgstr[1] ""
+"Le seguenti estensioni sembra che abbiano informazioni di pubblicazione o di "
+"controllo di revisione memorizzate localmente, e non saranno rimosse:"
 
 #: src/addon/manager.cpp:1452
 msgid "The following add-on could not be deleted properly:"
