updated German translation

--- a/po/wesnoth-manual/de.po
+++ b/po/wesnoth-manual/de.po
@@ -759,7 +759,7 @@ msgid ""
 "match."
 msgstr ""
 "Diese Auswahl verbindet Euch direkt mit dem offiziellem Server. Ihr werdet "
-"Euch kurze Zeit später im Mehrspielerbereich wiederfinden, in dem Ihr Eure "
+"Euch kurze Zeit später in der Mehrspielerlobby wiederfinden, in der Ihr Eure "
 "Spiele nach Euren Wünschen erstellen könnt, wo bereits viele Spiele eröffnet "
 "sind und wohl sogar einige Spieler bereits darauf warten, einem neuen "
 "Wettkampf beizutreten."
