Updated the Finnish translation.

--- a/po/wesnoth/fi.po
+++ b/po/wesnoth/fi.po
@@ -2377,7 +2377,7 @@ msgid ""
 "level up. Early in a campaign, try to give killing blows to these units so "
 "you can get some high-level troops sooner."
 msgstr ""
-"<I>Älykäs</i>-ominaisuudella varustetut yksiköt vaativat vähemmän kokemusta "
+"<i>Älykäs</i>-ominaisuudella varustetut yksiköt vaativat vähemmän kokemusta "
 "kehittyäkseen. Yritä antaa kampanjan alkuvaiheessa viimeistelyiskut näillä "
 "yksiköillä, jotta saat korkeatasoisia yksiköitä nopeammin."
 
@@ -3146,7 +3146,7 @@ msgstr "(viimeinen vuoro)"
 
 #: data/lua/wml/objectives.lua:126
 msgid "%d%% of gold carried over to the next scenario."
-msgstr "%d % kullasta siirtyi seuraavaan tehtävään."
+msgstr "%d%% kullasta siirtyi seuraavaan tehtävään."
 
 #. #-#-#-#-#  wesnoth.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [lua]: id=helptip_large, id=tooltip_large, id=the_list, id=the_label, id=the_icon, id=ok, id=cancel, id=flip, id=the_image
