updated Galician translation

--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -10,13 +10,13 @@
 # Jacobo Abel Fernández García <xakobe_gz@hotmail.com>, 2007.
 # Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2009-2010.
 # Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2010, 2011.
-# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011.
+# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-28 22:55+0100\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-06 15:21+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -24,6 +24,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -3057,8 +3058,9 @@ msgid ""
 "If an enemy benefits more from a rare terrain type than you do, occupying "
 "that terrain will deprive them of its benefits."
 msgstr ""
-"Se un inimigo se beneficia máis ca ti dun tipo de terreo raro, ocupando ese "
-"terreo privaralo dos seus beneficios."
+"Se unha unidade inimiga obtén unha mellor protección que as túas nun tipo de "
+"terreo pouco común, non sería mala idea ocupalo para privar ao adversario "
+"dos seus beneficios."
 
 #. [tip]
 #: data/hardwired/tips.cfg:196
@@ -4400,7 +4402,7 @@ msgstr "Non se soportan os mapas sen cabeceira."
 
 #: src/mapgen.cpp:743
 msgid "Random maps with an odd width aren't supported."
-msgstr "Non se soportan os mapas ao chou cun ancho raro."
+msgstr "Non se poden xerar mapas ao chou cun ancho non estándar."
 
 #: src/mapgen.cpp:1007
 msgid ""
