--- a/po/wesnoth-manual/fi.po
+++ b/po/wesnoth-manual/fi.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.7+svn\n"
 "POT-Creation-Date: 2012-01-08 18:11+0100\n"
-"PO-Revision-Date: 2012-01-13 22:36+0200\n"
+"PO-Revision-Date: 2012-01-14 20:16+0200\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
-"Language-Team: Finnish <kde-i18n-doc@kde.org>\n"
+"Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -264,7 +264,6 @@ msgstr ""
 # type: Content of: <book><chapter><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:90
-#, fuzzy
 msgid ""
 "<imageobject> <imagedata fileref=\"images/main-menu-1.9.4.jpg\"/> </"
 "imageobject>"
@@ -663,7 +662,6 @@ msgstr "Moninpeli-napista aukeavassa valikossa on seuraavat vaihtoehdot:"
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:314
-#, fuzzy
 msgid ""
 "<imageobject> <imagedata fileref=\"images/multiplayer-1.9.4.jpg\"/> </"
 "imageobject>"
@@ -843,7 +841,6 @@ msgstr "Peliruutu"
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:379
-#, fuzzy
 msgid ""
 "<imageobject> <imagedata fileref=\"images/game-screen-1.9.4.jpg\"/> </"
 "imageobject>"
@@ -876,7 +873,6 @@ msgstr ""
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:390
-#, fuzzy
 msgid ""
 "<imageobject> <imagedata fileref=\"images/top_pane-1.9.4.jpg\"/> </"
 "imageobject>"
@@ -971,7 +967,6 @@ msgstr "Tämänhetkisen heksan tyyppi"
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:459
-#, fuzzy
 msgid ""
 "<imageobject> <imagedata fileref=\"images/right_pane-1.9.4.jpg\"/> </"
 "imageobject>"
@@ -1780,7 +1775,7 @@ msgstr "Suunnittelutila päälle / pois"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1004
 msgid "y"
-msgstr ""
+msgstr "y"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1007
@@ -2051,7 +2046,7 @@ msgstr "Pandoraan liittyvät kontrollit ja pikanäppäimet"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1247
 msgid "D-Pad"
-msgstr ""
+msgstr "D-Pad"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1255
