Updated translations for Serbian.

--- a/po/wesnoth-l/sr.po
+++ b/po/wesnoth-l/sr.po
@@ -1,7 +1,7 @@
 # Translation of wesnoth-l.po into Serbian.
 # Copyright (C) 2008 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Chusslove Illich <caslav.ilic@gmx.net>, 2008, 2009, 2010, 2011.
+# Chusslove Illich <caslav.ilic@gmx.net>, 2008, 2009, 2010, 2011, 2012.
 # Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>, 2010, 2011.
 #
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-l\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-10 10:16+0100\n"
+"PO-Revision-Date: 2012-01-07 13:20+0100\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -2762,18 +2762,14 @@ msgstr "сељачки ловодар"
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:228
-#, fuzzy
-#| msgid ""
-#| "Huntsmen have spent their lives in the backwoods and swamps of their "
-#| "wilderness homes. They can bullseye wamprats and track anything that "
-#| "moves in their territory."
 msgid ""
 "Huntsmen have spent their lives in the backwoods and swamps of their "
 "wilderness homes. They can bullseye ferocious swamp rats and track anything "
 "that moves in their territory."
 msgstr ""
 "Ловодари су провели цео век у шумама и мочварама својих домова у дивљини. "
-"Могу устрелити мочварпацова и пратити све што се мрда по њиховој територији."
+"Могу устрелити побеснелог мочварног пацова и пратити све што се мрда по "
+"њиховој територији."
 
 #. [object]: id={ID}
 #: data/campaigns/Liberty/utils/utils.cfg:54
