--- a/po/wesnoth-manpages/sr.po
+++ b/po/wesnoth-manpages/sr.po
@@ -1,7 +1,7 @@
 # Translation of wesnoth-manpages.po into Serbian.
 # Copyright (C) 2006 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009, 2010, 2011.
+# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009, 2010, 2011, 2012.
 # Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>, 2010.
 #
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-manpages\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: 2011-11-30 16:10+0100\n"
+"PO-Revision-Date: 2012-01-14 14:50+0100\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -118,22 +118,12 @@ msgstr "поставља вредност BitsPerPixel. Пример: B<--bpp 32
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:49
-#, fuzzy, no-wrap
-#| msgid "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
+#, no-wrap
 msgid "B<-c, --campaign \\ [E<lt>id_campaignE<gt>]>"
-msgstr "B<-c, --campaign[[E<lt>тежинаE<gt>] E<lt>ид-походаE<gt> [E<lt>ид-сценаријаE<gt>]]>"
+msgstr "B<-c, --campaign  \\ [E<lt>ид-походаE<gt>]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:54
-#, fuzzy
-#| msgid ""
-#| "goes directly to the campaign based on the parameters.  The difficulty is "
-#| "a number between 1 and current campaign's difficulties number.  The "
-#| "default difficulty is 1.  The scenario must be one of the campaign's "
-#| "child scenarios. The default scenario is campaign's first scenario.  "
-#| "B<Note: When using this switch please ensure that you specify the data "
-#| "directory path as the final argument> aswell, otherwise the game will "
-#| "take the campaign/scenario id as the data dir."
 msgid ""
 "goes directly to the campaign with id E<lt>id_campaignE<gt>. A selection "
 "menu will appear if no id was specified.  B<Note:> When using this switch "
@@ -141,38 +131,39 @@ msgid ""
 "aswell, otherwise the game will take the campaign/scenario id as the data "
 "dir."
 msgstr ""
-"скаче директно на поход према параметрима. Тежина је број између 1 и броја "
-"тежине похода. Подразумевана тежина је 1. Сценарио мора припадати походу. "
-"Подразумеван је први сценарио похода. B<Напомена: При употреби ове опције "
-"морате задати и путању директоријума података као последњи аргумент>, иначе "
-"ће ИД похода или сценарија бити схваћен као директоријум података."
+"скаче директно на поход са ИД-ом E<lt>ид-походаE<gt>. Ако се ИД не зада, "
+"појавиће се мени за избор. B<Напомена:> При употреби ове опције морате "
+"задати и путању директоријума података као последњи аргумент, иначе ће ИД "
+"похода или сценарија бити схваћен као директоријум података."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:54
-#, fuzzy, no-wrap
-#| msgid "B<--data-dir E<lt>directoryE<gt>>"
+#, no-wrap
 msgid "B<--campaign-difficulty E<lt>difficultyE<gt>>"
-msgstr "B<--data-dir E<lt>директоријумE<gt>>"
+msgstr "B<--campaign-difficulty E<lt>тежинаE<gt>>"
 
+# rewrite-msgid: /widget/dialog/
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:57
 msgid ""
 "The difficulty of the specified campaign (1 to max). If none specified, the "
 "campaign difficulty selection widget will appear."
 msgstr ""
+"тежина задатог похода (од 1 до највеће). Ако се не зада, појавиће се дијалог "
+"за избор тежине похода."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:57
 #, no-wrap
 msgid "B<--campaign-scenario E<lt>id_scenarioE<gt>>"
-msgstr ""
+msgstr "B<--campaign-scenario E<lt>ид-сценаријаE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:60
 msgid ""
 "The id of the scenario from the specified campaign. The default is the first "
 "scenario."
-msgstr ""
+msgstr "ИД сценарија из задатог похода. Подразумеван је први сценарио."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:60
@@ -1645,9 +1636,3 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:286
 msgid "B<wesnoth>(6)."
 msgstr "B<wesnoth>(6)."
-
-#~ msgid "B<--new-syntax>"
-#~ msgstr "B<--new-syntax>"
-
-#~ msgid "enables the new campaign syntax parsing."
-#~ msgstr "активира ново рашчлањивање синтаксе похода."
