--- a/po/wesnoth/sr@ijekavianlatin.po
+++ b/po/wesnoth/sr@ijekavianlatin.po
@@ -1,7 +1,7 @@
 # Translation of wesnoth.po into Serbian.
 # Copyright (C) 2005 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009, 2010, 2011.
+# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009, 2010, 2011, 2012.
 # Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>, 2010, 2011.
 # Branko Kokanovic, 2006.
 msgid ""
@@ -2330,8 +2330,12 @@ msgstr "Dopunski server Vesnota"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:7
-msgid "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,Junicode-Regular.ttf"
-msgstr "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,Junicode-Regular.ttf"
+msgid ""
+"DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,"
+"Junicode-Regular.ttf"
+msgstr ""
+"DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,"
+"Junicode-Regular.ttf"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:8
@@ -6631,82 +6635,3 @@ msgstr "Sakrij planove igrača $player"
 #: src/whiteboard/manager.cpp:1088
 msgid "Whiteboard Options"
 msgstr "Opcije blokčeta"
-
-#~ msgid "Custom lighting for local time of day areas (uses more memory)"
-#~ msgstr ""
-#~ "Posebno osvetljenje za područja lokalnog doba dana (traži više memorije)."
-
-#~ msgid "TestCamp"
-#~ msgstr "Probni pohod"
-
-#~ msgid "Test campaign used to check if new campaign syntax is working."
-#~ msgstr "Probni pohod za proveru da li nova sintaksa pohoda radi."
-
-#~ msgid "(Easy)"
-#~ msgstr "(lako)"
-
-#~ msgid "Soldier"
-#~ msgstr "vojnik"
-
-#~ msgid "(Normal)"
-#~ msgstr "(normalno)"
-
-#~ msgid "Lord"
-#~ msgstr "gospodar"
-
-#~ msgid "(Hard)"
-#~ msgstr "(teško)"
-
-#~ msgid "High Lord"
-#~ msgstr "visoki gospodar"
-
-#~ msgid "Test campaign test [about] entry"
-#~ msgstr "Probni unos [about] probnog pohoda"
-
-#~ msgid "Test campaign - first scenario (grass)"
-#~ msgstr "Probni pohod — prvi scenario (trava)"
-
-#~ msgid "Players"
-#~ msgstr "Igrači"
-
-#~ msgid "Enemies"
-#~ msgstr "Protivnici"
-
-#~ msgid "Passed test color"
-#~ msgstr "Boja uspele probe"
-
-#~ msgid "Failed test color"
-#~ msgstr "Boja neuspele probe"
-
-#~ msgid "Difficulty: Easy"
-#~ msgstr "Težina: lako"
-
-#~ msgid "Difficulty: Normal"
-#~ msgstr "Težina: normalno"
-
-#~ msgid "Difficulty: Hard"
-#~ msgstr "Težina: teško"
-
-#~ msgid "Main campaign define"
-#~ msgstr "Definicija glavnog pohoda"
-
-#~ msgid "Extra campaign define"
-#~ msgstr "Definicija dopunskog pohoda"
-
-#~ msgid "Multiplayer define"
-#~ msgstr "Definicija višeigranja"
-
-#~ msgid "Defeat enemy leader"
-#~ msgstr "Poraziš li protivničkog vođa"
-
-#~ msgid "Download"
-#~ msgstr "Preuzmi"
-
-#~ msgid "Done"
-#~ msgstr "Gotovo"
-
-#~ msgid "Chat Log"
-#~ msgstr "Dnevnik ćaskanja"
-
-#~ msgid "No time of day has been defined."
-#~ msgstr "Doba dana nije određeno."
