--- a/po/wesnoth-aoi/sr@ijekavianlatin.po
+++ b/po/wesnoth-aoi/sr@ijekavianlatin.po
@@ -1,7 +1,7 @@
 # Translation of wesnoth-aoi.po into Serbian.
 # Copyright (C) 2007 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Chusslove Illich <caslav.ilic@gmx.net>, 2008, 2009, 2010, 2011.
+# Chusslove Illich <caslav.ilic@gmx.net>, 2008, 2009, 2010, 2011, 2012.
 # Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>, 2010.
 #
 msgid ""
