--- a/po/wesnoth-utbs/sr.po
+++ b/po/wesnoth-utbs/sr.po
@@ -1,7 +1,7 @@
 # Translation of wesnoth-utbs.po into Serbian.
 # Copyright (C) 2005 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009, 2010, 2011.
+# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009, 2010, 2011, 2012.
 # Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>, 2010.
 #
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-utbs\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-10 13:24+0100\n"
+"PO-Revision-Date: 2012-01-07 13:20+0100\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -15246,6 +15246,7 @@ msgstr "пустињска врачарка"
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:34
 msgid "Desert Shamans focus on less violent ways to hinder the enemy."
 msgstr ""
+"Пустињске врачарке теже мање насилним начинима за обуздавање непријатеља."
 
 #. [attack]: type=impact
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:50
@@ -17259,13 +17260,3 @@ msgstr "дуга тама (3)"
 #: data/campaigns/Under_the_Burning_Suns/utils/time.cfg:164
 msgid "The Long Dark (4)"
 msgstr "дуга тама (4)"
-
-#~ msgid ""
-#~ "Desert Shamans focus on less violent ways to hinder the enemy. Their "
-#~ "entangling attack slows enemies down and reduces by one the number of "
-#~ "times they may attack. Shamans also possess basic healing abilities."
-#~ msgstr ""
-#~ "Пустињске врачарке усредсређене су на мање насилне начине за ометање "
-#~ "непријатеља. Њихов уплитачки напад успорава противника и смањује за један "
-#~ "број пута који могу ударити у нападу. Такође познају основне вештине "
-#~ "видања."
