--- a/po/wesnoth-utbs/sr@latin.po
+++ b/po/wesnoth-utbs/sr@latin.po
@@ -1,7 +1,7 @@
 # Translation of wesnoth-utbs.po into Serbian.
 # Copyright (C) 2005 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009, 2010, 2011.
+# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009, 2010, 2011, 2012.
 # Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>, 2010.
 #
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-utbs\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-10 13:24+0100\n"
+"PO-Revision-Date: 2012-01-07 13:20+0100\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -15264,6 +15264,7 @@ msgstr "pustinjska vračarka"
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:34
 msgid "Desert Shamans focus on less violent ways to hinder the enemy."
 msgstr ""
+"Pustinjske vračarke teže manje nasilnim načinima za obuzdavanje neprijatelja."
 
 #. [attack]: type=impact
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:50
@@ -17280,13 +17281,3 @@ msgstr "duga tama (3)"
 #: data/campaigns/Under_the_Burning_Suns/utils/time.cfg:164
 msgid "The Long Dark (4)"
 msgstr "duga tama (4)"
-
-#~ msgid ""
-#~ "Desert Shamans focus on less violent ways to hinder the enemy. Their "
-#~ "entangling attack slows enemies down and reduces by one the number of "
-#~ "times they may attack. Shamans also possess basic healing abilities."
-#~ msgstr ""
-#~ "Pustinjske vračarke usredsređene su na manje nasilne načine za ometanje "
-#~ "neprijatelja. Njihov uplitački napad usporava protivnika i smanjuje za "
-#~ "jedan broj puta koji mogu udariti u napadu. Takođe poznaju osnovne "
-#~ "veštine vidanja."
