--- a/po/wesnoth-editor/fi.po
+++ b/po/wesnoth-editor/fi.po
@@ -1,21 +1,23 @@
 # Finnish translations for Battle for Wesnoth package.
 # Copyright (C) 2004 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Automatically generated, 2004.
 #
+# Automatically generated, 2004.
+# Jarkko Patteri <jarkkopatteri@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.4-CVS\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-03 10:40+0100\n"
-"PO-Revision-Date: 2010-11-25 21:13+0100\n"
-"Last-Translator: Jussi Rautio <kipuna@gmail.com>\n"
-"Language-Team: none\n"
-"Language: \n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-15 15:29+0200\n"
+"Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
+"Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
+"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Lokalize 1.2\n"
 
 #. [brush]
 #: data/core/editor/brushes.cfg:5
@@ -350,7 +352,7 @@ msgid ""
 "The map file looks like a scenario, but the map_data value does not point to "
 "an existing file"
 msgstr ""
-"Karttatiedosto näyttää skenaariolta, mutta map_data-arvo ei viittaa "
+"Karttatiedosto näyttää skenaariolta, mutta map_data -arvo ei viittaa "
 "olemassaolevaan tiedostoon"
 
 #: src/editor/map_context.cpp:100
@@ -366,14 +368,12 @@ msgid "Could not save the map: $msg"
 msgstr "Karttaa ei voitu tallentaa: $msg"
 
 #: src/gui/dialogs/editor_set_starting_position.cpp:84
-#, fuzzy
-#| msgid "(Player)^None"
 msgid "player^None"
 msgstr "Ei mikään"
 
 #: src/gui/dialogs/editor_set_starting_position.cpp:96
 msgid "Player $player_number"
-msgstr ""
+msgstr "Pelaaja $player_number"
 
 #: src/gui/dialogs/editor_settings.cpp:148
 msgid "Custom setting"
